akiBlog 更改依赖,readme保存旧依赖,引入springcloud

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -10,6 +10,8 @@ spring:
   mvc:
     pathmatch:
       matching-strategy: ANT_PATH_MATCHER
+  main:
+    allow-bean-definition-overriding: true
 
 mybatis:
   config-location: classpath:mybatis-config
