--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -4,9 +4,9 @@ server:
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/testdb?serverTimezone=GMT%2b8
+    url: jdbc:mysql://localhost:3306/sys?serverTimezone=GMT%2b8
     username: root
-    password: 123456
+    password: baicaiin33
   mvc:
     pathmatch:
       matching-strategy: ANT_PATH_MATCHER
