--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,12 +1,20 @@
 server:
   port: 8080
 
+#spring:
+#  datasource:
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+#    url: jdbc:mysql://localhost:3306/sys?serverTimezone=GMT%2b8
+#    username: root
+#    password: baicaiin33
+
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/testdb?serverTimezone=GMT%2b8
     username: root
     password: 123456
+
   mvc:
     pathmatch:
       matching-strategy: ANT_PATH_MATCHER
