AkiBlog 接口调用权限分配

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -4,10 +4,10 @@ server:
 #spring:
 #  datasource:
 #    driver-class-name: com.mysql.cj.jdbc.Driver
-#    url: jdbc:mysql://localhost:3306/sys?serverTimezone=GMT%2b8
+#    url: jdbc:mysql://localhost:3306/testdb?serverTimezone=GMT%2b8
 #    username: root
-#    password: baicaiin33
-#现场环境
+#    password: '!Baicaiin33'
+##现场环境
 
 spring:
   datasource:
@@ -15,7 +15,7 @@ spring:
     url: jdbc:mysql://localhost:3306/testdb?serverTimezone=GMT%2b8
     username: root
     password: 123456
-#测试环境
+##测试环境
 
   mvc:
     pathmatch:
