AkiBlog token报错返回给前端

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,5 +1,9 @@
 server:
   port: 8080
+  #在propertis配置文件中加上这两行即可放开拦截:
+  error:
+    include-exception: true
+    include-message: always
 
 #spring:
 #  datasource:
