--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -8,18 +8,28 @@ server:
 #spring:
 #  datasource:
 #    driver-class-name: com.mysql.cj.jdbc.Driver
-#    url: jdbc:mysql://localhost:3306/testdb?serverTimezone=GMT%2b8
+#    url: jdbc:mysql://localhost:3306/testdb?serverTimezone=UTC&useSSL=false&useUnicode=true&characterEncoding=UTF-8
 #    username: root
 #    password: '!Baicaiin33'
 ##现场环境
 
+#spring:
+#  datasource:
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+#    url: jdbc:mysql://localhost:3306/testdb?serverTimezone=UTC&useSSL=false&useUnicode=true&characterEncoding=utf8
+#    username: root
+#    password: 123456
+###测试环境
+
+
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/testdb?serverTimezone=GMT%2b8
+    url: jdbc:mysql://47.100.215.126:3306/testdb?serverTimezone=UTC&useSSL=false&useUnicode=true&characterEncoding=UTF-8
     username: root
-    password: 123456
-###测试环境
+    password: '!Baicaiin33'
+  ##远程测试环境
+
 
   mvc:
     pathmatch:
